force-app/main/default/objects/CampaignMechanics__c/CampaignMechanics__c.object-meta.xml
<CustomObject>
    <description>[a0t][CampaignMechanics__c] Mecânica definida para a campanha de Trade: Maneira de apuração e pagamento de benefício</description>
    <label>Mecânica de Campanha</label>
    <nameField>
        <displayFormat>CGO-{YYYY}{00000}</displayFormat>
        <label>Código de Mecânica de Campanha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mecânicas de Campanhas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>