force-app/main/default/objects/CampaignMechanics__c/fields/ApplyDiscount__c.field-meta.xml
<CustomField>
    <fullName>ApplyDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Descontar NC Automática</label>
    <type>Checkbox</type>
</CustomField>