force-app/main/default/objects/CampaignMechanics__c/fields/ApplyDiscountBenefitBln__c.field-meta.xml
<CustomField>
    <fullName>ApplyDiscountBenefitBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplicar Desconto Benefício</label>
    <type>Checkbox</type>
</CustomField>