force-app/main/default/objects/CampaignMechanics__c/fields/ApplyDiscountBln__c.field-meta.xml
<CustomField>
    <fullName>ApplyDiscountBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplicar Desconto</label>
    <type>Checkbox</type>
</CustomField>