force-app/main/default/objects/CampaignMechanics__c/fields/BenefitCalculation__c.field-meta.xml
<CustomField>
    <fullName>BenefitCalculation__c</fullName>
    <formula>BenefitCriteriaLkp__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apuração do Benefício</label>
    <type>Text</type>
</CustomField>