force-app/main/default/objects/CampaignMechanics__c/fields/BenefitCriteriaLkp__c.field-meta.xml
<CustomField>
    <fullName>BenefitCriteriaLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Critério do Beneficio</label>
    <referenceTo>CampaignIndicator__c</referenceTo>
    <relationshipName>BenefitCriteria</relationshipName>
    <type>Lookup</type>
</CustomField>