force-app/main/default/objects/CampaignMechanics__c/fields/Bond__c.field-meta.xml
<CustomField>
    <fullName>Bond__c</fullName>
    <label>Vínculo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>