force-app/main/default/objects/CampaignMechanics__c/fields/CalculationCriteria__c.field-meta.xml
<CustomField>
    <fullName>CalculationCriteria__c</fullName>
    <formula>CampaignIndicatorLkp__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Critério de Apuração</label>
    <type>Text</type>
</CustomField>