force-app/main/default/objects/CampaignMechanics__c/fields/CampaignIndicatorLkp__c.field-meta.xml
<CustomField>
    <fullName>CampaignIndicatorLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indicador de Campanha</label>
    <referenceTo>CampaignIndicator__c</referenceTo>
    <relationshipLabel>Mecânicas de Campanhas (Critério de Campanha)</relationshipLabel>
    <relationshipName>CampaignMechanics</relationshipName>
    <type>Lookup</type>
</CustomField>