force-app/main/default/objects/CampaignMechanics__c/fields/CampaignLkp__c.field-meta.xml
<CustomField>
    <fullName>CampaignLkp__c</fullName>
    <label>Campanha</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Mecânicas de Campanha</relationshipLabel>
    <relationshipName>CampaignMechanics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>