force-app/main/default/objects/CampaignMechanics__c/fields/MainMechanic__c.field-meta.xml
<CustomField>
    <fullName>MainMechanic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mecânica Principal</label>
    <type>Checkbox</type>
</CustomField>