force-app/main/default/objects/CampaignMechanics__c/fields/PaymentTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>PaymentTypeTxt__c</fullName>
    <label>Tipo de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FATU</fullName>
                <label>Sobre o Faturamento</label>
            </value>
            <value>
                <fullName>META</fullName>
                <label>Sobre a Meta</label>
            </value>
            <value>
                <fullName>FIXO</fullName>
                <label>Valor Fixo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>