force-app/main/default/objects/CampaignMechanics__c/fields/PayUsingGoal__c.field-meta.xml
<CustomField>
    <fullName>PayUsingGoal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pagar sobre a Meta</label>
    <type>Checkbox</type>
</CustomField>