force-app/main/default/objects/CampaignMechanics__c/validationRules/PaymentTypeFixed.validationRule-meta.xml
<ValidationRule>
    <fullName>PaymentTypeFixed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PaymentTypeTxt__c, &apos;FIXO&apos;), OR(NOT(ISBLANK(Percentage__c)), NOT(ISBLANK(BenefitCriteriaLkp__c ))))</errorConditionFormula>
    <errorMessage>Uma mecânica de campanha com pagamento fixo não pode possuir um critério de benefício ou uma porcentagem de benefício..</errorMessage>
</ValidationRule>