force-app/main/default/objects/CampaignMechanics__c/validationRules/PaymentTypeRevenueGoal.validationRule-meta.xml
<ValidationRule>
    <fullName>PaymentTypeRevenueGoal</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR(ISPICKVAL(PaymentTypeTxt__c , &apos;FATU&apos;), ISPICKVAL(PaymentTypeTxt__c , &apos;META&apos;)), 
OR(ISBLANK(BenefitCriteriaLkp__c), ISBLANK(Percentage__c)))</errorConditionFormula>
    <errorMessage>Uma mecânica de campanha com pagamento sobre a meta/faturamento deve possuir um benefício e uma porcentagem de benefício.</errorMessage>
</ValidationRule>